--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+<!-- login.html (Login Page) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,11 +9,11 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Login</h2>
+        <h2>Login to Pavan Agri Solutions</h2>
         <form id="loginForm">
             <input type="text" id="username" placeholder="Username" required>
             <input type="password" id="password" placeholder="Password" required>
-            <button type="submit">Login</button>
+            <button type="submit" class="button">Login</button>
             <p id="errorMessage"></p>
         </form>
     </div>
