--- a/farms.html
+++ b/farms.html
@@ -1,28 +1,73 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farms</title>
-    <link rel="stylesheet" href="styles/farms.css">
-</head>
-<body>
-    <div class="container">
-        <h2>Farms</h2>
-        <table>
-            <tr>
-                <th>Farm Name</th>
-                <th>Owner Name</th>
-                <th>Location</th>
-                <th>Area</th>
-                <th>Sy No</th>
-                <th>Attachments</th>
-                <th>Action</th>
-            </tr>
-            <tbody id="farmsTableBody"></tbody>
-        </table>
-        <button id="addFarmBtn">Add Farm</button>
-    </div>
-    <script src="scripts/farms.js"></script>
-</body>
-</html>
+/* dashboard.css (Dashboard Styles) */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+}
+
+header {
+    background: #2c3e50;
+    color: white;
+    padding: 15px;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header h1 {
+    margin: 0;
+}
+
+#logoutButton {
+    background: #e74c3c;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+nav {
+    background: #34495e;
+    padding: 10px;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+main {
+    padding: 20px;
+    text-align: center;
+}
+
+.stats {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.stats div {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-size: 18px;
+}
