--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<!-- login.html (Login Page) -->
+<!-- login.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,12 +9,11 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Login to Pavan Agri Solutions</h2>
+        <h2>Pavan Agri Solutions</h2>
         <form id="loginForm">
             <input type="text" id="username" placeholder="Username" required>
             <input type="password" id="password" placeholder="Password" required>
-            <button type="submit" class="button">Login</button>
-            <p id="errorMessage"></p>
+            <button type="submit">Login</button>
         </form>
     </div>
     <script src="scripts/auth.js"></script>
